Handle Enable-Native-Access manifest attribute if present
Closes https://github.com/oracle/graal/issues/10008